fix home section

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <main class="main">
 
     <!-- ------------- HOME -------------------->
-        <section class="home" id="about">
+        <section class="home section" id="about">
             <div class="home__container container grid">
 
                 <div class="home__content grid">
