--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
 
             <div class="about__buttons">
-                <a href="assets/file/resume.pdf" download="my_CV" target="_blank" class="button button--flex">
+                <a href="assets/file/resume.pdf" download="SolomonAlanDei-resume" target="_blank" class="button button--flex">
                     Download Resume <i class="uil uil-download-alt button__icon"></i>
                 </a>
             </div>
