add project description

--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
                         <div class="blog-slider__content">
                             <span class="blog-slider__code"> December 2023</span>
                             <div class="blog-slider__title"> Employee Management App</div>
-                            <div class="blog-slider__text"> {{ projItem.description }} </div>
+                            <div class="blog-slider__text"> 
+                                OSFF User Management App is designed for any form of organization to effectively manage the various Departments, Roles, and Members of the organization.
+                            </div>
                             <a href="https://osff-management-app.onrender.com" target="_blank" class="button blog-slider__button button--flex"> 
                                 Demo
                                 <i class="uil uil-play button__icon"></i>
@@ -185,8 +187,13 @@
 
                         <div class="blog-slider__content">
                             <span class="blog-slider__code"> November 2023</span>
-                            <div class="blog-slider__title"> Football Quiz App</div>
-                            <div class="blog-slider__text"> {{ projItem.description }} </div>
+                            <div class="blog-slider__title"> FootyQuiz App</div>
+                            <div class="blog-slider__text"> 
+                                FootyQuiz is a football quiz app that allows users to provide
+                                their username, answer some tough but interesting football questions
+                                about players and teams. 
+                                In the end, each user achieves a spot on the global leaderboard.
+                            </div>
                             <a href="https://osff-quiz.onrender.com" target="_blank" class="button blog-slider__button button--flex"> 
                                 Demo
                                 <i class="uil uil-play button__icon"></i>
