add python skill image

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <div class="skills__container-card">
                         <div class="card_skill shadow2">
                             <div class="imgBx">
-                                <img src="" alt="Python logo">
+                                <img src="assets/img/py.png" alt="Python logo">
                             </div>
                             <div class="contentBx">
                                 <h2> Python </h2>
