--- a/index.html
+++ b/index.html
@@ -134,6 +134,19 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="row" id="skillset_container">
+                    <div class="skills__container-card">
+                        <div class="card_skill shadow2">
+                            <div class="imgBx">
+                                <img src="assets/img/c.png" alt="Python logo">
+                            </div>
+                            <div class="contentBx">
+                                <h2> C Programming </h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="about__buttons">
